--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap": "^1.0",
-    "angular-i18n": "ˆ1.3.2"
+    "angular-bootstrap": "^1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
