--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap": "^1.0"
+    "angular-bootstrap": "^1.0",
+    "angular-i18n": "^1.5.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
