--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.0",
-    "angular-i18n": "^1.5.8"
+    "angular-i18n": "^1.5.8",
+    "angular-ui-mask": "^1.8.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
