--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.0",
     "angular-i18n": "^1.5.8",
-    "angular-ui-mask": "^1.8.7"
+    "angular-ui-mask": "^1.8.7",
+    "egmfilho-keys-shortcuts": "https://github.com/egmfilho/keys-shortcuts.git",
+    "egmfilho-input-filters": "https://github.com/egmfilho/input-filters.git"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
