--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-i18n": "^1.5.8",
     "angular-ui-mask": "^1.8.7",
     "egmfilho-keys-shortcuts": "https://github.com/egmfilho/keys-shortcuts.git",
-    "egmfilho-input-filters": "https://github.com/egmfilho/input-filters.git"
+    "egmfilho-input-filters": "https://github.com/egmfilho/input-filters.git",
+    "angular-ui-clock": "^0.5.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
