--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-ui-mask": "^1.8.7",
     "egmfilho-keys-shortcuts": "https://github.com/egmfilho/keys-shortcuts.git",
     "egmfilho-input-filters": "https://github.com/egmfilho/input-filters.git",
-    "angular-ui-clock": "^0.5.1"
+    "angular-ui-clock": "^0.5.1",
+    "angularMultipleSelect": "angular-multiple-select#^1.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
