--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "egmfilho-keys-shortcuts": "https://github.com/egmfilho/keys-shortcuts.git",
     "egmfilho-input-filters": "https://github.com/egmfilho/input-filters.git",
     "angular-ui-clock": "^0.5.1",
-    "angularMultipleSelect": "angular-multiple-select#^1.1.2"
+    "angularMultipleSelect": "angular-multiple-select#^1.1.2",
+    "angular-bootstrap-colorpicker": "^3.0.25"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
