--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "egmfilho-input-filters": "https://github.com/egmfilho/input-filters.git",
     "angular-ui-clock": "^0.5.1",
     "angularMultipleSelect": "angular-multiple-select#^1.1.2",
-    "angular-bootstrap-colorpicker": "^3.0.25"
+    "angular-bootstrap-colorpicker": "^3.0.25",
+    "angular-ui-select": "^0.19.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
