--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
+  },
+  "dependencies": {
+    "angular-nl2br": "^1.0.2"
   }
 }
