--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,11 @@
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
       ]
+    },
+    "angular-i18n": {
+      "main": [
+        "angular-locale_pt-br.js"
+      ]
     }
   }
 }
